# hush

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: claude_history.rs  git_watcher.rs  gossip.rs  hooks.rs  join.rs  main.rs  mdns.rs  memory_monitor.rs  peer_upgrade.rs  protocol.rs  pty.rs  state.rs  tls.rs  transfer.rs  trust.rs  upgrade.rs  ws.rs
docs/: DEBUGGING.md  PROTOCOL.md  RELEASE_CHECKLIST.md  VISION.md  claude-code-mcp-auth-bug-report.md
scripts/: install-hooks.sh  pre-commit  record-demo.mjs
tests/: package-lock.json  package.json  run_tests.mjs
ui/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: TEST_CASES.md  app.spec.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/Canvas/: Canvas.tsx  CanvasConnectors.tsx  PanelFrame.tsx  WorktreeListPanel.tsx
ui/src/components/Daemon/: DaemonPanel.tsx  MemoryPulse.tsx  StateSentence.tsx
ui/src/components/DotGrid/: DetailCard.tsx  DotGrid.tsx  TransferOverlay.tsx
ui/src/components/FileViewer/: FileRail.tsx  QuickOpen.tsx
ui/src/components/Layout/: CommandBar.tsx  MemoryBanner.tsx  Pane.tsx  TilingContainer.tsx  TopBar.tsx  TransferStatusCards.tsx  TrustCertBanner.tsx
ui/src/components/ProjectCard/: ProjectCard.tsx  StatusPill.tsx
ui/src/components/ProjectTree/: ProjectTree.tsx
ui/src/components/Terminal/: ShellFooter.tsx  ShellPane.tsx  TerminalPane.tsx
ui/src/components/ui/: ResizeHandle.tsx
ui/src/hooks/: useDaemonConnections.ts  useWebSocket.ts
ui/src/lib/: gridLayout.ts  intent.ts  protocol.test.ts  protocol.ts  ptyBus.test.ts  ptyBus.ts  status.ts
ui/src/lib/gemma/: bridge.ts  worker.ts
ui/src/store/: index.test.ts  index.ts  types.ts
