[package]
name = "hush"
version = "0.3.3"
edition = "2021"

[[bin]]
name = "hush"
path = "src/main.rs"

[[bin]]
name = "hush-hook"
path = "src/bin/hush_hook.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures-util = "0.3"
portable-pty = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
flate2 = "1"
tar = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = "0.10"
native-tls = "0.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
