[package]
name = "hush"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "hush"
path = "src/main.rs"

[[bin]]
name = "hush-hook"
path = "src/bin/hush_hook.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures-util = "0.3"
portable-pty = "0.8"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }
sha2 = "0.10"
native-tls = { version = "0.2", features = ["vendored"] }
if-addrs = "0.13"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
